Restore HTML wrapper from autosave

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 <body>
 
   <!-- Layer 1 diagram -->
-  </div>
-
+<div class="mermaid">
 </body>
 </html>
 subgraph ENTITY_PLANNING[🟨 Entity & Planning Structure]
